room-measure/eunbi/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ijipmatjip
  labels:
    name: ijipmatjip
    environment: production
